--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -1,95 +1,159 @@
-
+<script src="https://www.mercadopago.com/v2/security.js" view="item"></script>
+<style>
+	#button-checkout {
+		padding: 0 1.7142857142857142em;
+		font-family: "Helvetica Neue", Arial, sans-serif;
+		font-size: 0.875em;
+		line-height: 2.7142857142857144;
+		background: #009ee3;
+		border-radius: 0.2857142857142857em;
+		color: #fff;
+		cursor: pointer;
+		border: 0;
+	}
+</style>
 <div class="as-search-wrapper" role="main">
-    <div class="as-navtuck-wrapper">
-        <div class="as-l-fullwidth  as-navtuck" data-events="event52">
-            <div>
-                <div class="pd-billboard pd-category-header">
-                    <div class="pd-l-plate-scale">
-                        <div class="pd-billboard-background">
-                            <img src="./assets/music-audio-alp-201709" alt="" width="1440" height="320" data-scale-params-2="wid=2880&amp;hei=640&amp;fmt=jpeg&amp;qlt=95&amp;op_usm=0.5,0.5&amp;.v=1503948581306" class="pd-billboard-hero ir">
-                        </div>
-                        <div class="pd-billboard-info">
-                            <h1 class="pd-billboard-header pd-util-compact-small-18">Tienda e-commerce</h1>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="as-search-results as-filter-open as-category-landing as-desktop" id="as-search-results">
+	<div class="as-navtuck-wrapper">
+		<div class="as-l-fullwidth  as-navtuck" data-events="event52">
+			<div>
+				<div class="pd-billboard pd-category-header">
+					<div class="pd-l-plate-scale">
+						<div class="pd-billboard-background">
+							<img src="./assets/music-audio-alp-201709" alt="" width="1440" height="320"
+								data-scale-params-2="wid=2880&amp;hei=640&amp;fmt=jpeg&amp;qlt=95&amp;op_usm=0.5,0.5&amp;.v=1503948581306"
+								class="pd-billboard-hero ir">
+						</div>
+						<div class="pd-billboard-info">
+							<h1 class="pd-billboard-header pd-util-compact-small-18">Tienda e-commerce</h1>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="as-search-results as-filter-open as-category-landing as-desktop" id="as-search-results">
 
-        <div id="accessories-tab" class="as-accessories-details">
-            <div class="as-accessories" id="as-accessories">
-                <div class="as-accessories-header">
-                    <div class="as-search-results-count">
-                        <span class="as-search-results-value"></span>
-                    </div>
-                </div>
-                <div class="as-searchnav-placeholder" style="height: 77px;">
-                    <div class="row as-search-navbar" id="as-search-navbar" style="width: auto;">
-                        <div class="as-accessories-filter-tile column large-6 small-3">
+		<div id="accessories-tab" class="as-accessories-details">
+			<div class="as-accessories" id="as-accessories">
+				<div class="as-accessories-header">
+					<div class="as-search-results-count">
+						<span class="as-search-results-value"></span>
+					</div>
+				</div>
+				<div class="as-searchnav-placeholder" style="height: 77px;">
+					<div class="row as-search-navbar" id="as-search-navbar" style="width: auto;">
+						<div class="as-accessories-filter-tile column large-6 small-3">
 
-                            <button class="as-filter-button" aria-expanded="true" aria-controls="as-search-filters" type="button">
-                                <h2 class=" as-filter-button-text">
-                                    Smartphones
-                                </h2>
-                            </button>
+							<button class="as-filter-button" aria-expanded="true" aria-controls="as-search-filters" type="button">
+								<h2 class=" as-filter-button-text">
+									Smartphones
+								</h2>
+							</button>
 
 
-                        </div>
+						</div>
 
-                    </div>
-                </div>
-                <div class="as-accessories-results  as-search-desktop">
-                    <div class="width:60%">
-                        <div class="as-producttile-tilehero with-paddlenav " style="float:left;">
-                            <div class="as-dummy-container as-dummy-img">
+					</div>
+				</div>
+				<div class="as-accessories-results  as-search-desktop">
+					<div class="width:60%">
+						<div class="as-producttile-tilehero with-paddlenav " style="float:left;">
+							<div class="as-dummy-container as-dummy-img">
 
-                                <img src="./assets/wireless-headphones" class="ir ir item-image as-producttile-image  " style="max-width: 70%;max-height: 70%;"alt="" width="445" height="445">
-                            </div>
-                            <div class="images mini-gallery gal5 ">
-                            
+								<img src="./assets/wireless-headphones" class="ir ir item-image as-producttile-image  "
+									style="max-width: 70%;max-height: 70%;" alt="" width="445" height="445">
+							</div>
+							<div class="images mini-gallery gal5 ">
 
-                                <div class="as-isdesktop with-paddlenav with-paddlenav-onhover">
-                                    <div class="clearfix image-list xs-no-js as-util-relatedlink relatedlink" data-relatedlink="6|Powerbeats3 Wireless Earphones - Neighborhood Collection - Brick Red|MPXP2">
-                                        <div class="as-tilegallery-element as-image-selected">
-                                            <div class=""></div>
-                                            <img src="./assets/003.jpg" class="ir ir item-image as-producttile-image" alt="" width="445" height="445" style="content:-webkit-image-set(url({{ img }}) 2x);">
-                                        </div>
-                                        
-                                    </div>
 
-                                    
-                                </div>
+								<div class="as-isdesktop with-paddlenav with-paddlenav-onhover">
+									<div class="clearfix image-list xs-no-js as-util-relatedlink relatedlink"
+										data-relatedlink="6|Powerbeats3 Wireless Earphones - Neighborhood Collection - Brick Red|MPXP2">
+										<div class="as-tilegallery-element as-image-selected">
+											<div class=""></div>
+											<img id="product-picture" src="./assets/003.jpg" class="ir ir item-image as-producttile-image"
+												alt="" width="445" height="445" style="content:-webkit-image-set(url({{ img }}) 2x);">
+										</div>
 
-                                
+									</div>
 
-                            </div>
 
-                        </div>
-                        <div class="as-producttile-info" style="float:left;min-height: 168px;">
-                            <div class="as-producttile-titlepricewraper" style="min-height: 128px;">
-                                <div class="as-producttile-title">
-                                    <h3 class="as-producttile-name">
-                                        <p class="as-producttile-tilelink">
-                                            <span data-ase-truncate="2"> {{ title }} </span>
-                                        </p>
+								</div>
 
-                                    </h3>
-                                </div>
-                                <h3 >
-                                    {{ price }}
-                                </h3>
-                                <h3 >
-                                    {{ unit }}
-                                </h3>
-                            </div>
-                            <button type="submit" class="mercadopago-button" formmethod="post">Pagar</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+
+
+							</div>
+
+						</div>
+						<div class="as-producttile-info" style="float:left;min-height: 168px;">
+							<div class="as-producttile-titlepricewraper" style="min-height: 128px;">
+								<div class="as-producttile-title">
+									<h3 class="as-producttile-name">
+										<p class="as-producttile-tilelink">
+											<span data-ase-truncate="2" id="title"> {{ title }} </span>
+										</p>
+
+									</h3>
+								</div>
+								<h3 id="price">
+									{{ price }}
+								</h3>
+								<h3 id="quantity">
+									{{ unit }}
+								</h3>
+							</div>
+							<button id="button-checkout">
+								Pagar la compra
+							</button>
+
+							<script>
+								var orderData = {
+									quantity: document.getElementById("quantity").innerText,
+									title: document.getElementById("title").innerText,
+									price: document.getElementById("price").innerText,
+									pictureURL: document.getElementById('product-picture').src
+								};
+								fetch("/create-preference", {
+									method: "POST",
+									headers: {
+										"Content-Type": "application/json",
+									},
+									body: JSON.stringify(orderData),
+								})
+									.then(function (response) {
+										return response.json();
+									})
+									.then(function (response) {
+
+										createCheckoutButton(response)
+									})
+									.catch(function (err) {
+										console.error(err)
+										alert("Unexpected error");
+										$('#checkout-btn').attr("disabled", false);
+									});
+
+
+								function createCheckoutButton(preference) {
+									document.getElementById('button-checkout').addEventListener('click', function () {
+										document.location = preference.init_point
+									})
+									/*const checkout = mp.checkout({
+										preference: {
+											id: preference
+										},
+										render: {
+											container: '#button-checkout',
+											label: 'Pagar la compra',
+										}
+									});*/
+
+								}
+							</script>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
-   
