--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,3 +1,4 @@
+            <script src="https://www.mercadopago.com/v2/security.js" view="home"></script>
             <div class="as-search-wrapper" role="main">
                 <div class="as-navtuck-wrapper">
                     <div class="as-l-fullwidth  as-navtuck" data-events="event52">
@@ -207,13 +208,13 @@
                                                     </h3>
                                                 </div>
                                                 <div class="as-price-currentprice as-producttile-currentprice">
-                                                    $15.000
+                                                    S/200
                                                 </div>
                                             </div>
                                             <form action="/detail" method="get">
                                                 <input type="hidden" name="img" value="./assets/samsung-galaxy-s9-xxl.jpg">
                                                 <input type="hidden" name="title" value="Samsung Galaxy S9">
-                                                <input type="hidden" name="price" value="15000">
+                                                <input type="hidden" name="price" value="200">
                                                 <input type="hidden" name="unit" value="1">
                                                 <button type="submit" class="mercadopago-button" formmethod="get">Comprar</button>
                                             </form>
@@ -262,7 +263,7 @@
                                                     </h3>
                                                 </div>
                                                 <div class="as-price-currentprice as-producttile-currentprice">
-                                                    $10.000
+                                                    S/10.000
                                                 </div>
                                             </div>
                                             <form action="/detail" method="get">
@@ -318,7 +319,7 @@
                                                     </h3>
                                                 </div>
                                                 <div class="as-price-currentprice as-producttile-currentprice">
-                                                    $16.000
+                                                    S/16.000
                                                     <span class="as-price-previousprice as-producttile-previousprice">
                                                     </span>
                                                 </div>
@@ -375,7 +376,7 @@
                                                     </h3>
                                                 </div>
                                                 <div class="as-price-currentprice as-producttile-currentprice">
-                                                    $9.000
+                                                    S/9.000
                                                     <span class="as-price-previousprice as-producttile-previousprice">
                                                     </span>
                                                 </div>
@@ -427,7 +428,7 @@
                                                     </h3>
                                                 </div>
                                                 <div class="as-price-currentprice as-producttile-currentprice">
-                                                    $8.000
+                                                    S/8.000
                                                 </div>
                                             </div>
                                             <form action="/detail" method="get">
@@ -476,7 +477,7 @@
                                                     </h3>
                                                 </div>
                                                 <div class="as-price-currentprice as-producttile-currentprice">
-                                                    $10.000
+                                                    S/10.000
                                                     <span class="as-price-previousprice as-producttile-previousprice">
                                                     </span>
                                                 </div>
